--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ arrayref = "0.3.5"
 arrayvec = { version = "0.4.7", default-features = false, features = ["use_union"] }
 byteorder = { version = "1.2.4", default-features = false }
 constant_time_eq = "0.1.3"
+core_arch = { path = "../stdsimd/crates/core_arch" }
 
 [dev-dependencies]
 hex = "0.3.2"
