--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ arrayvec = { version = "0.4.7", default-features = false, features = ["use_union
 byteorder = { version = "1.2.4", default-features = false }
 constant_time_eq = "0.1.3"
 core_arch = { path = "../stdsimd/crates/core_arch" }
+packed_simd = {version = "*", features = ["into_bits"]}
 
 [dev-dependencies]
 hex = "0.3.2"
